Closed Bug 371080 Opened 19 years ago Closed 19 years ago

fix XUL button height, other CSS cleanup

Categories

(SeaMonkey :: Themes, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jaas, Assigned: jaas)

References

Details

Attachments

(4 files, 10 obsolete files)

Attached patch fix v1.0 (obsolete) — Splinter Review
This removes some unnecessary CSS and fixes XUL button height and width.
Attachment #255840 - Flags: review?(mano)
I'm not 100% sure about the change to button.plain in the theme, I just removed that because I don't know why we'd need it.
Flags: in-testsuite?
Attached patch fix v1.1 (obsolete) — Splinter Review
Attachment #255840 - Attachment is obsolete: true
Attachment #255852 - Flags: review?(mano)
Attachment #255840 - Flags: review?(mano)
Attached patch fix v1.2 (obsolete) — Splinter Review
Attachment #255852 - Attachment is obsolete: true
Attachment #255923 - Flags: review?(mano)
Attachment #255852 - Flags: review?(mano)
Attachment #255923 - Flags: review?(mano)
Attached file XUL example (obsolete) —
This Mac OS X native button should be 66 pixels wide from the dark border line on the left to the dark border line on the right. It should be 21 pixels tall from the dark border line on the top to the dark border line on the bottom. The only thing the toolkit part of this patch does is enforce the correct height and width. Without this patch the width is incorrect in this XUL example. The problem with button heights is really an issue with mozilla/browser pref CSS. This fixes that, but I will be posting another patch to this bug to fix the mozilla/browser CSS in a better way.
Attachment #255923 - Flags: review?(mano)
Attachment #255923 - Flags: review?(mano)
Attached patch fix v2.0 (obsolete) — Splinter Review
This patch does more size enforcement via nsITheme.
Attachment #255923 - Attachment is obsolete: true
Attached patch fix v2.1 (obsolete) — Splinter Review
Also fixes buttons in Firefox prefs.
Attachment #255961 - Attachment is obsolete: true
Attachment #256035 - Flags: review?(mano)
Attached file XUL example v1.1
Attachment #255929 - Attachment is obsolete: true
Blocks: 369584
Attachment #256035 - Flags: review?(mano)
Attached patch fix v2.2 (obsolete) — Splinter Review
Adds some comments, uses constants instead of literals for some things, makes buttons regular size in FF prefs.
Attachment #256035 - Attachment is obsolete: true
Attachment #256124 - Flags: review?(mano)
Comment on attachment 256124 [details] [diff] [review] fix v2.2 r=mano if you restore the rules for .button-text
Attachment #256124 - Flags: review?(mano) → review+
Attachment #256124 - Flags: superreview?(dbaron)
Attachment #256124 - Flags: superreview?(dbaron) → superreview?(pavlov)
Comment on attachment 256124 [details] [diff] [review] fix v2.2 vlad should take a look at this and/or dbaron?
Attachment #256124 - Flags: superreview?(pavlov) → superreview?(vladimir)
Attached patch fix v2.3 (obsolete) — Splinter Review
This addresses Mano's comment about .button-text rules, also fixes a problem with add-on enabled button color in selected add-on.
Attachment #256124 - Attachment is obsolete: true
Attachment #256491 - Flags: review?(mano)
Attachment #256124 - Flags: superreview?(vladimir)
Comment on attachment 256491 [details] [diff] [review] fix v2.3 Obsolete, better fix coming up. I shouldn't have originally removed the color for the "button" selector in buttons.css
Attachment #256491 - Attachment is obsolete: true
Attachment #256491 - Flags: review?(mano)
Attached patch fix v2.4Splinter Review
Attachment #256519 - Flags: review?(mano)
Comment on attachment 256519 [details] [diff] [review] fix v2.4 > > /* :::::::::: button :::::::::: */ > > button { > -moz-appearance: button; >+ /* The margin used here come from the Aqua Human Interface Guidelines, >+ there should be 12 pixels between two buttons. */ > margin: 6px; >- min-width: 6.3em; >- -moz-appearance: button; >- padding: 0; >- color: #000000; >+ color: -moz-DialogText; use ButtonText. r=mano otherwise.
Attachment #256519 - Flags: review?(mano) → review+
Attachment #256519 - Flags: superreview?(vladimir)
Attached file unit test (obsolete) —
this should pass w/ your patch applied. to land in the tree, remove the people.mozilla.com stuff from the test file links, and make them relative to base, e.g. /MochiKit/packed.js.
Attached file unit test
Attachment #256531 - Attachment is obsolete: true
Comment on attachment 256519 [details] [diff] [review] fix v2.4 sr=me
Attachment #256519 - Flags: superreview?(vladimir) → superreview+
fix v2.4 landed, unit test landing next
Attached patch unit test patch v1.0 (obsolete) — Splinter Review
Attachment #256705 - Flags: review?(sayrer)
Comment on attachment 256705 [details] [diff] [review] unit test patch v1.0 please add ifdef MOZ_MOCHITEST in the pinstripe Makefile like this one does: http://lxr.mozilla.org/mozilla/source/toolkit/content/tests/Makefile.in (you would do DIRS +=, obviously) r=sayrer with that
Attachment #256705 - Flags: review?(sayrer) → review+
Attachment #256709 - Flags: review?(sayrer)
Attachment #256705 - Attachment is obsolete: true
Attachment #256709 - Flags: review?(sayrer) → review+
test landed
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Will this test remain valid if the next OS version slightly changes the look of buttons so they have a different size? (For how many previous versions of Mac OS was it valid?) It seems like we could really use a GetPreferredWidgetSize as well, since you're hard-coding into themes something that nsNativeThemeCocoa could provide, no? (Windows would benefit from such a function as well.)
OK, I see in the patch that you're actually not getting this from the OS, so never mind, I suppose.
(In reply to comment #23) > Will this test remain valid if the next OS version slightly changes the look of > buttons so they have a different size? (For how many previous versions of Mac > OS was it valid?) It may not remain valid. We want to know about that, though. This is the best way to find out. If test maintenance turns out to be a large burden as we gather more of tests, we can revisit test guidelines at that time. > > It seems like we could really use a GetPreferredWidgetSize as well, This might be true, even though it may not apply to this test. Should we file that bug?
Blocks: 362081
Product: Core → SeaMonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: