fix chrome button heights, fix some native button rendering issues, clean up some CSS. b=371080 r=mano sr=vlad